k8s-dev-service.yml
# En este archivo se encuentra la configuración del despliegue de la aplicación
# utilizando Kubernetes (K8s es su acronimo, lo vamos a usar para referirnos asi mas adelante).
# En cada punto especificaremos los elementos respectivos.

# Version del API de Kubernetes
apiVersion: apps/v1
# Tipo de elemento
kind: Deployment
# Metadatos del elemento
metadata:
  # Nombre
  name: python-calculator-api
  # Etiqueta del Deployment
  labels:
    app: python-calculator-api
# Especificaciones del elemento
spec:
  replicas: 3
  # K8s agrupa los elementos del Deployment y los interconecta entre si utilizando etiquetas
  # Aqui definimos como seleccionar los elementos juntos
  selector:
    # En este caso va a seleccionar aquellos que coincidan con el nombre del deploy
    matchLabels:
      app: python-calculator-api
  # En esta sección definimos el contenido del pod y declaramos los contenedores
  template:
    metadata:
      labels:
        # Esta es la etiqueta que se le asigna al pod, debe ser igual al selector (linea 24)
        app: python-calculator-api
    spec:
      # Declaracion de contenedores
      # name: Nombre del contenedor
      # image: Nombre de la imagen, por defecto buscara en Docker Hub o en el repositorio privado
      #        configurado en K8s
      containers:
        - name: python-calculator-api
          image: caprilespe/python-calculator-api:3.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

# Vamos a especificar el balanceador de carga en este mismo archivo
# para ello vamos a crear otro documento separado, esto se hace con el operador "---"
---
kind: Service
apiVersion: v1
metadata:
  name: python-calculator-service
spec:
  type: LoadBalancer
  selector:
    app: python-calculator-api
  # Declaracion y redireccion del trafico por los puertos
  # En este caso, estamos ocupando el puerto 80 para la conexión HTTP
  # y lo estamos redirigiendo al 3000 de la red virtual del pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
