k8s-scale-service.yml
# Version del API de Kubernetes
apiVersion: apps/v1
# Tipo de elemento
kind: Deployment
# Metadatos del elemento
metadata:
  # Nombre
  name: python-calculator-api
  # Etiqueta del Deployment
  labels:
    app: python-calculator-api
# Especificaciones del elemento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-calculator-api
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-calculator-api
    spec:
      containers:
        - name: python-calculator-api
          image: caprilespe/python-calculator-api:3.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: python-calculatorv2-service
spec:
  type: ClusterIP
  selector:
    app: python-calculator-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
