k8s-deployments-dev.yaml
###################################
# SUM
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-calculator-api
  labels:
    app: python-calculator-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-calculator-api
  template:
    metadata:
      labels:
        app: python-calculator-api
    spec:
      containers:
        - name: python-calculator-api
          image: caprilespe/python-calculator-api:3.0.0
          ports:
            - containerPort: 4000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---

---
kind: Service
apiVersion: v1
metadata:
  name: python-calculator-service
  annotations:
    cloud.google.com/backend-config: '{"default": "python-calculator-config"}'
spec:
  type: NodePort
  selector:
    app: python-calculator-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31019
---

---
###################################
# MULTIPLICACION
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-calculatorv2-api
  labels:
    app: python-calculatorv2-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-calculatorv2-api
  template:
    metadata:
      labels:
        app: python-calculatorv2-api
    spec:
      containers:
        - name: python-calculatorv2-api
          image: caprilespe/python-calculator-api:3.0.0
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: python-calculatorv2-service
  annotations:
    cloud.google.com/backend-config: '{"default": "python-calculatorv2-config"}'
spec:
  type: NodePort
  selector:
    app: multiplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31017

###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-calculatorv2-ingress
  labels:
    name: python-calculatorv2-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /suma_numeros
        backend:
          service:
            name: python-calculator-service
            port: 
              number: 80
      - pathType: Prefix
        path: /multiplicar
        backend:
          service:
            name: python-calculatorv2-service
            port: 
              number: 80
