k8s-deployments.yaml
###################################
# SUM
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-calculator-api
  labels:
    app: python-calculator-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-calculator-api
  template:
    metadata:
      labels:
        app: python-calculator-api
    spec:
      containers:
        - name: python-calculator-api
          image: us-west1-docker.pkg.dev/qwiklabs-gcp-01-5b951c2791ec/cloud-native-registry/python-calculator-api:2.2
          ports:
            - containerPort: 4000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: python-calculator-service
  annotations:
    cloud.google.com/backend-config: '{"default": "python-calculator-config"}'
spec:
  type: NodePort
  selector:
    app: python-calculator-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31019

---
###################################
# MULTIPLICACION
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-calculatorv3-api
  labels:
    app: python-calculatorv3-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-calculatorv3-api
  template:
    metadata:
      labels:
        app: python-calculatorv3-api
    spec:
      containers:
        - name: python-calculatorv3-api
          image: us-west1-docker.pkg.dev/qwiklabs-gcp-01-5b951c2791ec/cloud-native-registry/python-calculator-api:2.2
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: python-calculatorv3-service
  annotations:
    cloud.google.com/backend-config: '{"default": "python-calculatorv3-config"}'
spec:
  type: NodePort
  selector:
    app: python-calculatorv3-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31017
---
###################################
# EXPONENCIAL
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-calculatorv4-api
  labels:
    app: python-calculatorv4-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-calculatorv4-api
  template:
    metadata:
      labels:
        app: python-calculatorv4-api
    spec:
      containers:
        - name: python-calculatorv4-api
          image: us-west1-docker.pkg.dev/qwiklabs-gcp-01-5b951c2791ec/cloud-native-registry/python-calculator-api:2.2
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: python-calculatorv4-service
  annotations:
    cloud.google.com/backend-config: '{"default": "python-calculatorv4-config"}'
spec:
  type: NodePort
  selector:
    app: python-calculatorv4-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31020

###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-calculatorv3-ingress
  labels:
    name: python-calculatorv3-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /suma_numeros
        backend:
          service:
            name: python-calculator-service
            port: 
              number: 80
      - pathType: Prefix
        path: /multiplicar
        backend:
          service:
            name: python-calculatorv3-service
            port: 
              number: 80
      - pathType: Prefix
        path: /exponencial
        backend:
          service:
            name: python-calculatorv4-service
            port: 
              number: 80
